# datasphere

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC-P2P.md
.ba/: config.json  issues.jsonl
.wm/: dive_context.md
.wm/sessions/b131cda7-8ec9-4e98-b486-201e38f923d0/: working_set.md
mcp/: index.js  package-lock.json  package.json
src/: batch.rs  distill.rs  embed.rs  lib.rs  llm.rs  main.rs  queue.rs  session.rs
src/core/: edge.rs  mod.rs  node.rs
src/store/: lance.rs  mod.rs  schema.rs
src/transcript/: mod.rs  reader.rs
src/watch/: all_projects.rs  mod.rs  session.rs
