[package]
name = "datasphere"
version = "0.2.0"
edition = "2024"
description = "Background daemon that distills knowledge from Claude Code sessions into a searchable graph"
license = "LicenseRef-Proprietary"
repository = "https://github.com/cloud-atlas-ai/datasphere"

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Storage (LanceDB) - must match arrow version lancedb uses
lancedb = "0.23.1"
arrow-array = "56"
arrow-schema = "56"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal"] }
futures = "0.3"

# HTTP client for OpenAI API
reqwest = { version = "0.13", features = ["json"] }

# Tokenization for OpenAI models (cl100k_base encoding)
tiktoken-rs = "0.9"

# Semantic text chunking
semchunk-rs = "0.1"

# SimHash for document similarity
simhash = "0.2"

# File watching
notify = "8.2.0"

# Paths
dirs = "6"
walkdir = "2"
which = "7"

# Unix process management
libc = "0.2"

[dev-dependencies]
tempfile = "3"
